properties about display

--- a/index.html
+++ b/index.html
@@ -86,13 +86,45 @@
                     DISPLAY
                 </header>
                 <p>
-                    El cross-axis es el eje transversal al eje principal. Su dirección depende de la dirección del eje principal.
+                    display: flex
                 </p>
 
                 <div class="box-example">
-                   <div class="item">a</div>
-                   <div class="item">b</div>
-                   <div class="item">c</div>
+                    <div class="displayFlex">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>
+
+                    <div class="displayFlex">
+                        <div class="item">d</div>
+                        <div class="item">e</div>
+                        <div class="item">f</div>
+                    </div>
+                </div>
+
+            </article>
+
+            <article id="display">
+                <header>
+                    DISPLAY
+                </header>
+                <p>
+                    display: inline-flex
+                </p>
+
+                <div class="box-example">
+                    <div class="displayInlineFlex">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>
+
+                    <div class="displayInlineFlex">
+                        <div class="item">d</div>
+                        <div class="item">e</div>
+                        <div class="item">f</div>
+                    </div>
                 </div>
 
             </article>
