properties about flex-direction

--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
 
             <article id="display">
                 <header>
-                    DISPLAY
+                    <h3>display</h3>
+                    <h5>flex | inline-flex</h5>
                 </header>
                 <p>
                     display: flex
@@ -107,7 +108,8 @@
 
             <article id="display">
                 <header>
-                    DISPLAY
+                    <h3>display</h3>
+                    <h5>flex | inline-flex</h5>
                 </header>
                 <p>
                     display: inline-flex
@@ -128,6 +130,88 @@
                 </div>
 
             </article>
+
+
+            <article id="flexDirectionRow">
+                <header>
+                    <h3>flex-direction</h3>
+                    <h5>row | row-reverse | column | column-reverse</h5>
+                </header>
+                <p>
+                    flex-direction: row
+                </p>
+
+                <div class="box-example">
+                    <div class="flexDirectionRow">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+
+            <article id="flexDirectionRowReverse">
+                <header>
+                    <h3>flex-direction</h3>
+                    <h5>row | row-reverse | column | column-reverse</h5>
+                </header>
+                <p>
+                    flex-direction: row-reverse
+                </p>
+
+                <div class="box-example">
+                    <div class="flexDirectionRowReverse">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+
+            <article id="flexDirectionColumn">
+                <header>
+                    <h3>flex-direction</h3>
+                    <h5>row | row-reverse | column | column-reverse</h5>
+                </header>
+                <p>
+                    flex-direction: column
+                </p>
+
+                <div class="box-example">
+                    <div class="flexDirectionColumn">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+
+            <article id="flexDirectionColumnReverse">
+                <header>
+                    <h3>flex-direction</h3>
+                    <h5>row | row-reverse | column | column-reverse</h5>
+                </header>
+                <p>
+                    flex-direction: column-reverse
+                </p>
+
+                <div class="box-example">
+                    <div class="flexDirectionColumnReverse">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+
 
         </section>
 
