properties about flex-wrap

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <h5>flex | inline-flex</h5>
                 </header>
                 <p>
-                    display: inline-flex
+                    display: inline-flex;
                 </p>
 
                 <div class="box-example">
@@ -138,7 +138,8 @@
                     <h5>row | row-reverse | column | column-reverse</h5>
                 </header>
                 <p>
-                    flex-direction: row
+                    display: flex;
+                    flex-direction: row;
                 </p>
 
                 <div class="box-example">
@@ -158,7 +159,8 @@
                     <h5>row | row-reverse | column | column-reverse</h5>
                 </header>
                 <p>
-                    flex-direction: row-reverse
+                    display: flex;
+                    flex-direction: row-reverse;
                 </p>
 
                 <div class="box-example">
@@ -178,7 +180,8 @@
                     <h5>row | row-reverse | column | column-reverse</h5>
                 </header>
                 <p>
-                    flex-direction: column
+                    display: flex;
+                    flex-direction: column;
                 </p>
 
                 <div class="box-example">
@@ -198,7 +201,8 @@
                     <h5>row | row-reverse | column | column-reverse</h5>
                 </header>
                 <p>
-                    flex-direction: column-reverse
+                    display: flex;
+                    flex-direction: column-reverse;
                 </p>
 
                 <div class="box-example">
@@ -210,6 +214,139 @@
                 </div>
 
             </article>
+
+            <article id="flexWrapNoWrap">
+                <header>
+                    <h3>flex-wrap</h3>
+                    <h5>nowrap | wrap | wrap-reverse</h5>
+                </header>
+                <p>
+                    display: flex;
+                    flex-wrap: nowrap;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexWrapNoWrap">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                        <div class="item">d</div>
+                        <div class="item">e</div>
+                        <div class="item">f</div>
+                        <div class="item">g</div>
+                        <div class="item">h</div>
+                        <div class="item">i</div>
+                        <div class="item">j</div>
+                        <div class="item">k</div>
+                        <div class="item">l</div>
+                        <div class="item">m</div>
+                        <div class="item">n</div>
+                        <div class="item">o</div>
+                        <div class="item">p</div>
+                        <div class="item">k</div>
+                        <div class="item">r</div>
+                        <div class="item">s</div>
+                        <div class="item">t</div>
+                        <div class="item">u</div>
+                        <div class="item">v</div>
+                        <div class="item">w</div>
+                        <div class="item">x</div>
+                        <div class="item">y</div>
+                        <div class="item">z</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+
+            <article id="flexWrapWrap">
+                <header>
+                    <h3>flex-wrap</h3>
+                    <h5>nowrap | wrap | wrap-reverse</h5>
+                </header>
+                <p>
+                    display: flex;
+                    flex-wrap: wrap;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexWrapWrap">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                        <div class="item">d</div>
+                        <div class="item">e</div>
+                        <div class="item">f</div>
+                        <div class="item">g</div>
+                        <div class="item">h</div>
+                        <div class="item">i</div>
+                        <div class="item">j</div>
+                        <div class="item">k</div>
+                        <div class="item">l</div>
+                        <div class="item">m</div>
+                        <div class="item">n</div>
+                        <div class="item">o</div>
+                        <div class="item">p</div>
+                        <div class="item">k</div>
+                        <div class="item">r</div>
+                        <div class="item">s</div>
+                        <div class="item">t</div>
+                        <div class="item">u</div>
+                        <div class="item">v</div>
+                        <div class="item">w</div>
+                        <div class="item">x</div>
+                        <div class="item">y</div>
+                        <div class="item">z</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+
+
+            <article id="flexWrapWrapReverse">
+                <header>
+                    <h3>flex-wrap</h3>
+                    <h5>nowrap | wrap | wrap-reverse</h5>
+                </header>
+                <p>
+                    display: flex;
+                    flex-wrap: wrap-reverse;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexWrapWrapReverse">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                        <div class="item">d</div>
+                        <div class="item">e</div>
+                        <div class="item">f</div>
+                        <div class="item">g</div>
+                        <div class="item">h</div>
+                        <div class="item">i</div>
+                        <div class="item">j</div>
+                        <div class="item">k</div>
+                        <div class="item">l</div>
+                        <div class="item">m</div>
+                        <div class="item">n</div>
+                        <div class="item">o</div>
+                        <div class="item">p</div>
+                        <div class="item">k</div>
+                        <div class="item">r</div>
+                        <div class="item">s</div>
+                        <div class="item">t</div>
+                        <div class="item">u</div>
+                        <div class="item">v</div>
+                        <div class="item">w</div>
+                        <div class="item">x</div>
+                        <div class="item">y</div>
+                        <div class="item">z</div>
+                    </div>                  
+                </div>
+
+            </article>
+
 
 
 
