--- a/index.html
+++ b/index.html
@@ -348,6 +348,51 @@
             </article>
 
 
+            <article id="flexFlow">
+                <header>
+                    <h3>flex-flow</h3>      
+                    <h5> Todas las combinaciones posibles entre las propiedades entre flex-direction y flex-wrap</h5>            
+                </header>
+                <p>
+                    display: flex;
+                    flex-flow: row wrap;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexFlow">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                        <div class="item">d</div>
+                        <div class="item">e</div>
+                        <div class="item">f</div>
+                        <div class="item">g</div>
+                        <div class="item">h</div>
+                        <div class="item">i</div>
+                        <div class="item">j</div>
+                        <div class="item">k</div>
+                        <div class="item">l</div>
+                        <div class="item">m</div>
+                        <div class="item">n</div>
+                        <div class="item">o</div>
+                        <div class="item">p</div>
+                        <div class="item">k</div>
+                        <div class="item">r</div>
+                        <div class="item">s</div>
+                        <div class="item">t</div>
+                        <div class="item">u</div>
+                        <div class="item">v</div>
+                        <div class="item">w</div>
+                        <div class="item">x</div>
+                        <div class="item">y</div>
+                        <div class="item">z</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+
+
 
 
         </section>
