properties about justify-content

--- a/index.html
+++ b/index.html
@@ -392,7 +392,149 @@
             </article>
 
 
+            <article id="flexJustifyContentFlexStart">
+                <header>
+                    <h3>justify-content</h3>
+                    <h5>flex-start | flex-end | center | space-between | space-around | space-evenly</h5>
+                </header>
+                <p>
+                    display: flex;
+                    justify-content: flex-start;
+                </p>
 
+                <div class="box-example">
+                    <div class="flexJustifyContentFlexStart">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+            <article id="flexJustifyContentFlexEnd">
+                <header>
+                    <h3>justify-content</h3>
+                    <h5>flex-start | flex-end | center | space-between | space-around | space-evenly</h5>
+                </header>
+                <p>
+                    display: flex;
+                    justify-content: flex-end;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexJustifyContentFlexEnd">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+
+            <article id="flexJustifyContentFlexEnd">
+                <header>
+                    <h3>justify-content</h3>
+                    <h5>flex-start | flex-end | center | space-between | space-around | space-evenly</h5>
+                </header>
+                <p>
+                    display: flex;
+                    justify-content: flex-end;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexJustifyContentFlexEnd">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+            <article id="flexJustifyContentCenter">
+                <header>
+                    <h3>justify-content</h3>
+                    <h5>flex-start | flex-end | center | space-between | space-around | space-evenly</h5>
+                </header>
+                <p>
+                    display: flex;
+                    justify-content: center;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexJustifyContentFlexEnd">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+
+            <article id="flexJustifyContentSpaceBetween">
+                <header>
+                    <h3>justify-content</h3>
+                    <h5>flex-start | flex-end | center | space-between | space-around | space-evenly</h5>
+                </header>
+                <p>
+                    display: flex;
+                    justify-content: space-between;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexJustifyContentSpaceBetween">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+
+            <article id="flexJustifyContentSpaceAround">
+                <header>
+                    <h3>justify-content</h3>
+                    <h5>flex-start | flex-end | center | space-between | space-around | space-evenly</h5>
+                </header>
+                <p>
+                    display: flex;
+                    justify-content: space-around;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexJustifyContentSpaceAround">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+
+            <article id="flexJustifyContentSpaceEvenly">
+                <header>
+                    <h3>justify-content</h3>
+                    <h5>flex-start | flex-end | center | space-between | space-around | space-evenly</h5>
+                </header>
+                <p>
+                    display: flex;
+                    justify-content: space-evenly;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexJustifyContentSpaceEvenly">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>                  
+                </div>
+
+            </article>
 
 
         </section>
