properties about align-items

--- a/index.html
+++ b/index.html
@@ -536,6 +536,106 @@
 
             </article>
 
+            <article id="flexAlingItemsFlexStart">
+                <header>
+                    <h3>align items</h3>
+                    <h5> flex-start | flex-end | stretch | center | baseline | first baseline | last baseline | start | end | self-start </h5>
+                </header>
+                <p>
+                    display: flex;
+                    align-items: flex-start;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexAlingItemsFlexStart">
+                        <div class="item heightItemA">a</div>
+                        <div class="item heightItemB">b</div>
+                        <div class="item heightItemC">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+            <article id="flexAlingItemsFlexEnd">
+                <header>
+                    <h3>align items</h3>
+                    <h5> flex-start | flex-end | stretch | center | baseline | first baseline | last baseline | start | end | self-start </h5>
+                </header>
+                <p>
+                    display: flex;
+                    align-items: flex-end;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexAlingItemsFlexEnd">
+                        <div class="item heightItemA">a</div>
+                        <div class="item heightItemB">b</div>
+                        <div class="item heightItemC">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+            <article id="flexAlingItemsCenter">
+                <header>
+                    <h3>align items</h3>
+                    <h5> flex-start | flex-end | stretch | center | baseline | first baseline | last baseline | start | end | self-start </h5>
+                </header>
+                <p>
+                    display: flex;
+                    align-items: center;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexAlingItemsCenter">
+                        <div class="item heightItemA">a</div>
+                        <div class="item heightItemB">b</div>
+                        <div class="item heightItemC">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+            <article id="flexAlingItemsStrech">
+                <header>
+                    <h3>align items</h3>
+                    <h5> flex-start | flex-end | stretch | center | baseline | first baseline | last baseline | start | end | self-start </h5>
+                </header>
+                <p>
+                    display: flex;
+                    align-items: stretch;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexAlingItemsStrech">
+                        <div class="item">a</div>
+                        <div class="item">b</div>
+                        <div class="item">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
+            <article id="flexAlingItemsBaseline">
+                <header>
+                    <h3>align items</h3>
+                    <h5> flex-start | flex-end | stretch | center | baseline | first baseline | last baseline | start | end | self-start </h5>
+                </header>
+                <p>
+                    display: flex;
+                    align-items: baseline;
+                </p>
+
+                <div class="box-example">
+                    <div class="flexAlingItemsBaseline">
+                        <div class="item2 heightItemA">a</div>
+                        <div class="item2 heightItemB">b</div>
+                        <div class="item2 heightItemC">c</div>
+                    </div>                  
+                </div>
+
+            </article>
+
 
         </section>
 
